my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/ESYNTAX_unnamed_cdecl/T_ESYNTAX_unnamed_cdecl-struct.h.tmp
/* Generated by dmlc, do not edit! */

#ifndef T_ESYNTAX_UNNAMED_CDECL_STRUCT_H
#define T_ESYNTAX_UNNAMED_CDECL_STRUCT_H

typedef struct test test_t;

conf_class_t *_initialize_T_ESYNTAX_unnamed_cdecl(void);


#endif /* not T_ESYNTAX_UNNAMED_CDECL_STRUCT_H */
